[feat] Implementation of checkstyle.xml and jacoco coverage.
